# Photoresistance-light-sampler

./: CMakeLists.txt  as2UdpGui.py
app/: CMakeLists.txt
app/include/: network.h
app/src/: main.c  network.c  periodTimer.c
hal/include/hal/: periodTimer.h  potLed.h  sampler.h  sigDisplay.h  timing.h
hal/src/: potLed.c  sampler.c  sigDisplay.c
